copy coordinates button fix on safari

--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -58,6 +58,10 @@
         flex: 1 1 30%;
         font-size: 13px;
     }
+
+    #copyButton {
+        all: unset;
+      }      
 }
 
 @media screen and (max-height: 850px) {
